# mcp-mesh

./: README.md  bootstrap.dockerfile  compose.yml  node.dockerfile  pyproject.toml
src/mcp_mesh/: __init__.py  api.py  configuration.py  initial.py  lifespan.py  main.py  mcp_client.py  models.py  server.py
